# cristal_shell

./: Cargo.toml  flake.nix
src/: dbus.rs  main.rs  messages.rs  session.rs  shell.rs
src/data/: mod.rs
src/data/system/: os.rs
src/surfaces/: background.rs  corners.rs  dashboard.rs  mod.rs  notifications.rs  osd.rs  runner.rs  status_bar.rs
src/wayland/: mod.rs  outputs.rs  workspaces.rs
src/widgets/: button.rs  dashboard_pages.rs  mod.rs  sb_battery.rs  sb_clock.rs  sb_workspaces_list.rs  slider.rs  ternary_selector.rs
